--- a/Data/EDA/project_EDA.ipynb
+++ b/Data/EDA/project_EDA.ipynb
@@ -473,6 +473,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 109,
+   "id": "011dd00f-6ea0-4fe2-ab9b-c6bdd6036c69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15443, 37)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "895eb815-8990-4091-b5ac-20e8bafa7214",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(510, 37)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.query(\"All_NBA_Boolean == True\").shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7566e374-4a4b-4a60-806e-b980a13018ad",
+   "metadata": {},
+   "source": [
+    "The dataset consists of 15,443 rows that represent a player and the season that they played. We have 510 rows that have All-NBA players and the season they were selected."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "id": "08284fc4-24b3-48fd-aedc-457b691b63c9",
    "metadata": {},
