update with data of betas

--- a/Hierarchical-byposition.ipynb
+++ b/Hierarchical-byposition.ipynb
@@ -2160,11 +2160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0ede8197-baf4-4b30-9e13-342af367a770",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sum_hierarchical_player.to_csv(\"posterior/positional_hierarchical_model_no_offset.csv\")"
+   ]
   }
  ],
  "metadata": {
