--- a/NonHierarchical.ipynb
+++ b/NonHierarchical.ipynb
@@ -2055,11 +2055,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2c67d8aa-e11d-4a5b-96d8-12203a4d7a85",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "beta_non_hierarchical.to_csv(\"posterior/non_hierarchical_model.csv\")"
+   ]
   }
  ],
  "metadata": {
